// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStatus creates a status 1`] = `
Array [
  Array [
    Object {
      "context": "my-step",
      "owner": "JasonEtco",
      "repo": "example",
      "sha": 123,
      "state": "pending",
    },
  ],
]
`;

exports[`createStatus creates a status with a gate-ish string 1`] = `
Array [
  Array [
    Object {
      "context": "my-step",
      "owner": "JasonEtco",
      "repo": "example",
      "sha": 123,
      "state": "success",
    },
  ],
]
`;

exports[`createStatus creates a status with a sub-object 1`] = `
Array [
  Array [
    Object {
      "context": "my-step",
      "description": "Your status",
      "owner": "JasonEtco",
      "repo": "example",
      "sha": 123,
      "state": "failure",
    },
  ],
]
`;

exports[`createStatus creates a status with expected state 1`] = `
Array [
  Array [
    Object {
      "context": "my-step",
      "owner": "JasonEtco",
      "repo": "example",
      "sha": 123,
      "state": "success",
    },
  ],
]
`;
